# fastapi

./: main.py  pyproject.toml
config/: database.py
models/: todos.py
routes/: route.py
schema/: schemas.py
