[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = ""
authors = ["nasrullaw74 <nasrullaw74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pymongo = {extras = ["srv"], version = "^4.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
